Windows window, dx11 context finished

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,6 @@ SET(TOY_XWINDOW_SOURCE_DIR ${PROJECT_SOURCE_DIR}/Source)
 MESSAGE(STATUS "${PROJECT_NAME} CMake Begin...")
 
 ADD_SUBDIRECTORY(Source)
-#ADD_SUBDIRECTORY(Example)
+ADD_SUBDIRECTORY(Example)
 
 MESSAGE(STATUS "${PROJECT_NAME} CMake End")
