--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -13,9 +13,11 @@ else()
 	set(TOY_XWINDOW_MORE_RUNTIME_CHECK "0")
 endif()
 
+### ToyUtility Path
 set(OPTION_TOY_UTILITY_PATH "${PROJECT_SOURCE_DIR}/../ToyUtility" CACHE PATH "path/to/ToyUtility" FORCE)
 
 ## end of CMake Options
+
 
 ## Third Party Libs
 #ADD_SUBDIRECTORY(ThirdParty)
@@ -24,7 +26,7 @@ set(OPTION_TOY_UTILITY_PATH "${PROJECT_SOURCE_DIR}/../ToyUtility" CACHE PATH "pa
 CONFIGURE_FILE(
     "${TOY_XWINDOW_SOURCE_DIR}/ToyXWindowConfig.h.in"
     "${PROJECT_BINARY_DIR}/ToyXWindowConfig.h"
-    )
+)
 
 ADD_SUBDIRECTORY(${OPTION_TOY_UTILITY_PATH} ToyUtility.out)
 INCLUDE_DIRECTORIES(${TOY_UTILITY_INCLUDE_PATHS})
@@ -38,7 +40,7 @@ INCLUDE_DIRECTORIES(
     ${PROJECT_BINARY_DIR}
 )
 
-if(TOY_WINDOWS AND TRL_USING_DX11)
+if(TOY_WINDOWS)
 set(TOY_WINDOWS_DX11_EXTRN_LIB
 	d3d11
 	d3dcompiler
@@ -46,6 +48,7 @@ set(TOY_WINDOWS_DX11_EXTRN_LIB
 	dxgi
 )
 endif()
+
 
 ADD_LIBRARY(ToyXWindow
     ${TOY_XWINDOW_SRC}
@@ -71,7 +74,7 @@ SET(TOY_XWINDOW_INCLUDE_PATHS
 
 SET(TOY_XWINDOW_LIBRARIES
     ToyXWindow
-    ToyUtility
+    ${TOY_UTILITY_LIBRARIES}
     ${TOY_WINDOWS_DX11_EXTRN_LIB}
     CACHE INTERNAL "TOY_XWINDOW Librarys"
 )
