CMake build files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,21 @@
 # 
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
-PROJECT(ToyXWindow)
 
-SET(TOY_XWINDOW_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/Include)
-SET(TOY_XWINDOW_SOURCE_DIR ${PROJECT_SOURCE_DIR}/Source)
+if(NOT TOY_XWINDOW_LOADED)
 
-MESSAGE(STATUS "${PROJECT_NAME} CMake Begin...")
+    PROJECT(ToyXWindow)
 
-ADD_SUBDIRECTORY(Source)
-ADD_SUBDIRECTORY(Example)
+    SET(TOY_XWINDOW_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/Include)
+    SET(TOY_XWINDOW_SOURCE_DIR ${PROJECT_SOURCE_DIR}/Source)
 
-MESSAGE(STATUS "${PROJECT_NAME} CMake End")
+    MESSAGE(STATUS "${PROJECT_NAME} CMake Begin...")
+
+    ADD_SUBDIRECTORY(Source)
+    ADD_SUBDIRECTORY(Example)
+
+    MESSAGE(STATUS "${PROJECT_NAME} CMake End")
+
+    SET(TOY_XWINDOW_LOADED TRUE CACHE PATH "ToyXWindow project loaded" FORCE)
+
+endif()
